--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "date-fns": "^2.21.1",
     "dontpad-api": "^1.0.5",
     "koa": "^2.13.1",
+    "koa-pug": "^5.0.0",
     "koa-router": "^10.0.0",
     "koa-send": "^5.0.1",
     "uuid": "^8.3.2"
