--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "axios": "^0.21.1",
     "date-fns": "^2.21.1",
     "dontpad-api": "^1.0.5",
+    "fs-extra": "^9.1.0",
     "koa": "^2.13.1",
     "koa-pug": "^5.0.0",
     "koa-router": "^10.0.0",
-    "koa-send": "^5.0.1",
     "uuid": "^8.3.2"
+  },
+  "devDependencies": {
+    "jest": "^26.6.3"
   }
 }
